--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -151,8 +151,8 @@
     online
     <span class="onlinedot mx-2"></span>
     offline
-    <span class="onlinedot mx-2" style="background-color: orangered"></span>
-    ingame
+    <!-- <span class="onlinedot mx-2" style="background-color: orangered"></span>
+    ingame -->
   </div>
 </footer>
 
