--- a/frontend/src/app/pages/homepage/profil/profil.component.html
+++ b/frontend/src/app/pages/homepage/profil/profil.component.html
@@ -20,13 +20,13 @@
 </div>
 <!-- Bottom -->
 <div class="row" style="justify-content: center">
-  <button
+  <!-- <button
     class="col-md-3 p-2 m-5 bg-warning text-dark changebtn"
     data-bs-toggle="modal"
     data-bs-target="#playerEdit"
   >
     Username ändern
-  </button>
+  </button> -->
   <button
     class="col-md-3 p-2 m-5 bg-warning text-dark changebtn"
     data-bs-toggle="modal"
