Profil websocket & Verlauf Design

--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -96,7 +96,7 @@
       class="shadow box"
       [ngClass]="toggleProfil ? ['displayShow'] : ['displayHide']"
     >
-      <app-profil [userModel]="userModel" *ngIf="userModel"> </app-profil>
+      <app-profil *ngIf="userModel"> </app-profil>
     </div>
 
     <!-- StatistikArea -->
