--- a/frontend/src/app/pages/homepage/profil/profil.component.html
+++ b/frontend/src/app/pages/homepage/profil/profil.component.html
@@ -13,9 +13,11 @@
     >person</span
   >
   <div class="mx-3 my-3">
-    <h3>Username: {{ userModel?.username }}</h3>
-    <h3>Gewonnen: {{ userModel?.gamesWon }}</h3>
-    <h3>Verloren: {{ userModel?.gamesLost }}</h3>
+    <h3>Username: {{ userName }}</h3>
+    <h3>Spiele Gesamt: {{ userAllGames }}</h3>
+    <h3>Gewonnen: {{ userWins }}</h3>
+    <h3>Unentschieden: {{ userDraw }}</h3>
+    <h3>Verloren: {{ userLoses }}</h3>
   </div>
 </div>
 <!-- Bottom -->
