--- a/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
+++ b/frontend/src/app/pages/homepage/verlauf/verlauf.component.html
@@ -19,6 +19,7 @@
           ? '#808080'
           : '#B22222',
       'text-align': 'center',
+      height: '90px',
       'border-radius': '15px'
     }"
   >
