--- a/frontend/src/app/pages/homepage/homepage.component.html
+++ b/frontend/src/app/pages/homepage/homepage.component.html
@@ -9,7 +9,7 @@
   <div class="col-md-2 shadow box" style="overflow-y: scroll">
     <div class="row">
       <h2 style="text-align: center" class="d-flex justify-content-center">
-        Spieler online
+        Alle Spieler
       </h2>
       <div class="list-group list-group-flush" *ngFor="let user of allUsers">
         <button
